--- a/style/main.css
+++ b/style/main.css
@@ -73,13 +73,16 @@ font-family: 'Work Sans', sans-serif;
 
 /*-------------------------------------------- Hero-Section --------------------------------------------*/
 #hero-section{
-    background-image: linear-gradient(#000a, #000a), url("/assets/images/heroSection/hero-bg.png");
+    background-image: linear-gradient(#000a, #000a), url("../assets/images/heroSection/hero-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     min-height: 665px;
     height: 80vh;
     color: var(--color-white);
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
 }
 
 .hero-section-top-container {
@@ -110,4 +113,106 @@ font-family: 'Work Sans', sans-serif;
     font-weight: 600;
     font-size: 20px;
     line-height: 34px;
+}
+
+.hero-section-right-container{
+    padding-right: 149px;
+}
+
+.hero-section-bottom-container{
+    display: flex;
+    overflow: hidden;
+}
+
+
+.hero-section-bottom-services-container{
+    padding: 32px 0;
+    white-space: nowrap;
+    animation: banner 10s linear infinite
+}
+
+.marquee-item-service{
+    display: inline-block;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 34px;    
+}
+.marquee-item-service span{
+    display: inline-block;
+    margin: 0 20px;
+    height: 6px;
+    width: 6px;
+    background: var(--color-prim);
+    border-radius: 100%;
+}
+
+@keyframes banner {
+    0%{
+        transform: translateX(-100%);
+    }
+
+
+    100%{
+        transform: translateX(0);
+    }
+
+}
+
+
+/*-------------------------------------------- Achievement-Section --------------------------------------------*/
+
+#achievement-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 84px;
+    padding: 0 100px;
+}
+
+.single-achivement-container{
+    margin-bottom: 65px;
+}
+.achivement-header{
+    color: var(--color-black-80);
+}
+
+.achivement-subtitle{
+    color: var(--color-black-60);
+}
+
+.video-container{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 970px;
+    height: 594px;
+    background-image: linear-gradient(#000a, #000a), url("../assets/images/heroSection/video-bg.png");
+    border-radius: 20px;
+}
+
+
+.play-outer-circle{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    height: 310px;
+    width: 310px;
+    background: #ECDE6233;
+}
+.play-inner-circle{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    height: 228px;
+    width: 228px;
+    background: var(--color-prim);
+    color: var(--color-black-80);
 }
