--- a/style/main.css
+++ b/style/main.css
@@ -58,6 +58,7 @@ font-family: 'Work Sans', sans-serif;
     align-items: center;
     padding: 20px 54px;
     z-index: 100;
+    /* background: var(--color-black); */
 }
 
 .navbar-btn{
@@ -82,6 +83,7 @@ font-family: 'Work Sans', sans-serif;
     color: var(--color-white);
     display: flex;
     flex-direction: column;
+    align-items: center;
     overflow-x: hidden;
 }
 
@@ -91,6 +93,7 @@ font-family: 'Work Sans', sans-serif;
     align-items: center;
     width: 100%;
     height: 100%;
+    max-width: 1500px;
 }
 
 .hero-section-left-container{
@@ -128,7 +131,7 @@ font-family: 'Work Sans', sans-serif;
 .hero-section-bottom-services-container{
     padding: 32px 0;
     white-space: nowrap;
-    animation: banner 10s linear infinite
+    animation: banner 30s linear infinite
 }
 
 .marquee-item-service{
@@ -163,8 +166,15 @@ font-family: 'Work Sans', sans-serif;
 
 #achievement-section{
     display: flex;
+    justify-content: center;
+}
+
+.achivement-container-center{
+    display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    max-width: 1500px;
     margin-top: 84px;
     padding: 0 100px;
 }
