--- a/style/underConstruction.css
+++ b/style/underConstruction.css
@@ -1,5 +1,5 @@
 #uc-section{
-    background-image: linear-gradient(#000a, #000a), url("/assets/images/heroSection/hero-bg.png");
+    background-image: linear-gradient(#000a, #000a), url("../assets/images/heroSection/hero-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
