--- a/style/main.css
+++ b/style/main.css
@@ -58,6 +58,7 @@ font-family: 'Work Sans', sans-serif;
     align-items: center;
     padding: 20px 54px;
     z-index: 100;
+    transition: all .25s ease-in-out;
 }
 
 .navbar-btn{
@@ -70,7 +71,9 @@ font-family: 'Work Sans', sans-serif;
     border-radius: 8px;
 }
 
-
+.navbar-color{
+    background: var(--color-black);
+}
 /*-------------------------------------------- Hero-Section --------------------------------------------*/
 #hero-section{
     background-image: linear-gradient(#000a, #000a), url("/assets/images/heroSection/hero-bg.png");
@@ -110,4 +113,10 @@ font-family: 'Work Sans', sans-serif;
     font-weight: 600;
     font-size: 20px;
     line-height: 34px;
+}
+
+@media only screen and (max-width: 1000px){
+    .nevbar-container{
+        padding: 20px 1rem;
+    }
 }
