--- a/style/underConstruction.css
+++ b/style/underConstruction.css
@@ -136,6 +136,12 @@
         column-gap: 30px;
     }
     .uc-section-bottom-container-img-container img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+    .uc-section-bottom-container-img-container a{
         width: 28px;
+        height: 28px;
     }
 }
