--- a/style/main.css
+++ b/style/main.css
@@ -326,3 +326,33 @@ font-family: 'Work Sans', sans-serif;
       stroke-dashoffset: 0;
     }
   }
+
+/*-------------------------------------------- experties-Section --------------------------------------------*/
+
+#experties-section{
+    position: relative;
+    margin-top: 10rem;
+    height: 820px;
+    background: var(--color-black);
+}
+
+.experties-main-title{
+    font-family: 'Work Sans', sans-serif;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 200px;
+    color: #fff7;
+}
+.experties-main-subtitle{
+    position: absolute;
+    top: 165px;
+    left: 600px;
+    color: var(--color-white);
+}
+
+#headerEffectCanvas {
+    width: 100%;
+    height: 100%;
+    /* overflow: scroll; */
+  }
