--- a/style/main.css
+++ b/style/main.css
@@ -165,6 +165,53 @@ font-family: 'Work Sans', sans-serif;
 
 }
 
+.output {
+    text-align:center;
+
+    color:var(--color-prim);
+  }
+
+.output h1 {
+    font-size:84px;
+    display: inline-block;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 700;
+  }
+  
+  /* Cursor Styling */
+  
+  .cursor::after {
+    content:'';
+    display:inline-block;
+    margin-left:3px;
+    background-color:var(--color-prim);
+    animation-name:blink;
+    animation-duration:1s;
+    animation-iteration-count: infinite;
+  }
+  h1.cursor::after {
+    height:65px;
+    width:13px;
+  }
+  p.cursor::after {
+    height:13px;
+    width:6px;
+  }
+  
+  @keyframes blink {
+    0% {
+      opacity:1;
+    }
+    49% {
+      opacity:1;
+    }
+    50% {
+      opacity:0;
+    }
+    100% {
+      opacity:0;
+    }
+  }
 
 /*-------------------------------------------- Achievement-Section --------------------------------------------*/
 
@@ -242,23 +289,55 @@ font-family: 'Work Sans', sans-serif;
 }
 
 .service-section-content-container{
+    position: relative;
     width: 100%;
     max-width: 1500px;
+    height: 100%;
     padding: 0 50px;
     display: flex;
     flex-wrap: wrap;
-    row-gap: 140px;
 }
 
+.service-section-static-bg-container{
+    position: sticky;
+    left: 500px;
+    top: -0.5rem;
+    z-index: -10;
+}
+
+.service-section-static-bg-container h1{
+    display: inline-block;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 680px;
+    font-weight: 700;
+    color: #eeeeee;
+    text-shadow: 4px 4px 14px #00000022;
+}
+.service-section-static-bg-container img{
+    position: absolute;
+    left: -14rem;
+    top: 10rem;
+    opacity: 0;
+    scale: 0;
+}
+
+.first-sticky-container{
+    margin-top: -50rem;
+}
+
+.last-sticky-container{
+    margin-bottom: 10.6rem;
+}
 .service-single-type-sticky-container{
     position: relative;
     height: 1050px;
+    padding-top: 140px;
 }
 
 .service-single-type-container{
     width: 100%;
     position: sticky;
-    top: 8rem;
+    top: 10rem;
     display: flex;
     /* justify-content: space-between; */
     align-items: center;
@@ -267,7 +346,7 @@ font-family: 'Work Sans', sans-serif;
 
 .service-single-type-bg-number{
     position: absolute;
-    left: 250px;
+    left: 700px;
     z-index: -10;
 }
 
@@ -282,6 +361,10 @@ font-family: 'Work Sans', sans-serif;
 
 .service-single-type-content-container{
     padding-right: 150px;
+}
+
+.service-single-type-img-container{
+    width: 485px;
 }
 
 .service-single-type-title-container{
@@ -301,6 +384,8 @@ font-family: 'Work Sans', sans-serif;
 .service-single-type-subservice-container li{
     color: var(--color-black-60);
     margin-bottom: 24px;
+    margin-left: -100px;
+    opacity: 0;
 }
 
 #title-marker-technology{
@@ -315,10 +400,20 @@ font-family: 'Work Sans', sans-serif;
     left: -15%;
 }
 
-.title-marker-design-path{
+.title-marker-path{
     stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
-    animation: dash 10s ease-out infinite forwards;
+    /* animation: dash 1.5s ease-in-out infinite forwards; */
+}
+
+.title-marker-technology-path{
+    stroke-dasharray: 2000;
+    stroke-dashoffset: 2000;
+}
+
+.title-marker-business-path{
+    stroke-dasharray: 1020;
+    stroke-dashoffset: 1013;
 }
 
 @keyframes dash {
@@ -354,5 +449,146 @@ font-family: 'Work Sans', sans-serif;
 #headerEffectCanvas {
     width: 100%;
     height: 100%;
-    /* overflow: scroll; */
   }
+
+/*-------------------------------------------- unboxing-Section --------------------------------------------*/
+#unboxing-section{
+    display: flex;
+    justify-content: center;
+    margin-top: 120px;
+    height: 658px;
+}
+
+.unboxing-section-content-container{
+    width: 100%;
+    height: 100%;
+    max-width: 1500px;
+    padding: 0 50px;
+    display: flex;
+    align-items: center;
+}
+
+.unboxing-section-title{
+    width: 100%;
+    white-space: nowrap;
+}
+.unboxing-section-loading-blob-container{
+    position: absolute;
+    left: 68rem;
+    display: flex;
+    column-gap: 3rem;
+    z-index: -10;
+}
+
+.unboxing-section-loading-blob-container div{
+    width: 110px;
+    height: 100px;
+    background: #eeeeee;
+    box-shadow: 4px 4px 14px #00000022;
+    border-radius: 50px;
+    opacity: 0;
+}
+
+/*-------------------------------------------- review-Section --------------------------------------------*/
+
+#review-section{
+    display: flex;
+    justify-content: center;
+    padding-top: 84px;
+    height: 848px;
+    background: var(--color-black);
+}
+
+.review-section-content-container{
+    width: 100%;
+    max-width: 1500px;
+    height: 100%;
+    padding: 0 54px;
+    color: var(--color-white);
+}
+
+.review-section-title-container{
+    position: relative;
+}
+
+#title-marker-happy{
+    position: absolute;
+    top: 70px;
+    left: 230px;
+}
+
+.review-section-reviews-container{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.review-section-quotes-container{
+    position: absolute;
+    right: 0;
+    z-index: 2;
+}
+
+.review-section-slides-container{
+    position: relative;
+    height: 70%;
+    width: 93%;
+    overflow: hidden;  
+    display: flex;
+    flex: 1;
+}
+
+.review-section-slides-inner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    padding-top: 6rem;
+}
+
+.review-section-slide{
+    position: absolute;
+    min-width: 100%;
+    height: 396px;
+    
+}
+
+.review-section-slide-content-container{
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    background: #232323;
+    border-radius: 40px;
+    margin:0 1rem;
+    box-shadow: 0px 8px var(--color-white);
+}
+
+.slide-para{
+    width: 80%;
+}
+
+.slide-client{
+    font-weight: 700;
+}
+
+.slide-client-designation{
+    margin-top: 4px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 34px;   
+}
+
+.slider-button-container{
+    position: absolute;
+    right: 10rem;
+    display: flex;
+    column-gap: 34px;
+}
+
+.slider-button-container button{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
