--- a/style/main.css
+++ b/style/main.css
@@ -25,8 +25,12 @@ font-family: 'Work Sans', sans-serif;
     --color-black : #000000;
     --color-black-80 : #333333;
     --color-black-60: #666666;
+    --btn-transition: all 0.15s ease-in-out;
 }
 
+body{
+    background: var(--color-white);
+}
 .title-typo{
     font-family: 'Work Sans', sans-serif;
     font-weight: 700;
@@ -66,9 +70,18 @@ font-family: 'Work Sans', sans-serif;
     background: var(--color-prim);
     font-weight: 500;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 20.8px;
     border: none;
+    border: 2px solid var(--color-prim);
     border-radius: 8px;
+    transition: var(--btn-transition);
+    cursor: pointer;
+}
+.navbar-btn:hover{
+    background: var(--color-white);
+    border: 2px solid var(--color-black);
+    border-radius: 8px;
+    box-sizing: border-box;
 }
 
 .navbar-color{
@@ -702,13 +715,21 @@ font-family: 'Work Sans', sans-serif;
 .askus-section-bottom-container button{
     color: var(--color-white);
     background: var(--color-black);
-    border: none;
+    border: 3px solid var(--color-black);
     border-radius: 8px;
-    padding: 25px 0px ;
+    padding: 22px 0px ;
     width: 652px;
     font-weight: 800;
     font-size: 24px;
     line-height: 30.12px;
+    transition: var(--btn-transition);
+    cursor: pointer;
+}
+
+.askus-section-bottom-container button:hover{
+    color: var(--color-black);
+    background: none;
+    border: 3px solid var(--color-black);
 }
 
 .askus-section-bottom-abs-container{
@@ -788,13 +809,21 @@ font-family: 'Work Sans', sans-serif;
 .designprocess-section-bottom-container button{
     color: var(--color-white);
     background: var(--color-black);
-    border: none;
+    border: 3px solid var(--color-black);
     border-radius: 8px;
     padding: 25px 0px ;
     width: 652px;
     font-weight: 800;
     font-size: 24px;
     line-height: 30.12px;
+    transition: var(--btn-transition);
+    cursor: pointer;
+}
+
+.designprocess-section-bottom-container button:hover{
+    color: var(--color-black);
+    background: none;
+    border: 3px solid var(--color-black);
 }
 
 /*-------------------------------------------- blogs-Section --------------------------------------------*/
@@ -871,9 +900,21 @@ font-family: 'Work Sans', sans-serif;
     border-radius: 8px;
     border: 4px solid var(--color-black);
     background: none;
+    cursor: pointer;
+    transition: var(--btn-transition);
 }
 
 .blogs-read-more-btn{
+    background: var(--color-black);
+    color: var(--color-white);
+}
+
+.blogs-read-more-btn:hover{
+    background: none;
+    color: var(--color-black);
+}
+
+.blogs-view-all-btn:hover{
     background: var(--color-black);
     color: var(--color-white);
 }
@@ -909,25 +950,38 @@ font-family: 'Work Sans', sans-serif;
     width: 100%;
 }
 
+#title-marker-footer-invisible{
+    position: absolute;
+    top: 7rem;
+    right: 23rem;
+}
+
 .footer-section-top-container p{
     margin-top: 24px;
     margin-bottom: 64px;
     font-weight: 600;
     font-size: 24px;
     line-height: 40.8px;
+    align-items: center;
 }
 
 .footer-section-top-container button{
-    margin-top: 24px;
-    margin-bottom: 64px;
     width: 522px;
-    padding: 25px 0;
+    padding: 22px 0;
     font-weight: 800;
     font-size: 24px;
     line-height: 30.12px;
-    border: none;
+    border: 3px solid var(--color-prim);
     border-radius: 8px;
     background: var(--color-prim);
+    cursor: pointer;
+    transition: var(--btn-transition);
+}
+
+.footer-section-top-container button:hover{
+    background: var(--color-black);
+    color: var(--color-white);
+    border-color: var(--color-white);
 }
 
 .footer-title{
@@ -935,6 +989,7 @@ font-family: 'Work Sans', sans-serif;
 }
 
 .footer-section-bottom-container{
+    margin-top: 75px;
     padding: 0 54px;
     padding-bottom: 42px;
     display: flex;
